--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <p>love and prosperity!</p>
 <p>lastly...</p>
 <p>I'd like to wish you one more time</p>
-<p>a very happy birthday Miss. Nisha jha</p>
+<p>a very happy birthday Sister</p>
 <p>LOVE YOU SO MUCH</p>
 
 			</div>
